# rag-challenge

./: .env  README.md  pyproject.toml  setup_ollama.sh
src/: config.py  generation.py  indexing.py  inference_runner.py  ingestion.py  main.py  models.py  retrieval.py  schemas.py  utils.py
